--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -16,6 +16,7 @@
 	display: flex;
 	flex-shrink: 0;
 	flex-direction: column;
+	gap: 50px;
 	box-sizing: border-box;
 	width: 616px;
 	height: auto;
@@ -30,3 +31,11 @@
 	justify-content: space-between;
 	margin-top: auto;
 }
+
+// .modalClose{
+// 	transform: translate(-616px);
+// }
+
+// .modalOpen{
+// 	transform: translate(0px);
+// }
