--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -3,7 +3,7 @@
 	left: 0;
 	width: 616px;
 	height: 100%;
-	overflow: scroll;
+	overflow: auto;
 	transform: translate(-616px);
 	transition: transform 0.5s ease;
 }
@@ -16,7 +16,7 @@
 	display: flex;
 	flex-shrink: 0;
 	flex-direction: column;
-	gap: 50px;
+	gap: 38px;
 	box-sizing: border-box;
 	width: 616px;
 	height: auto;
@@ -28,6 +28,7 @@
 
 .bottomContainer {
 	display: flex;
+	flex-direction: row-reverse;
 	justify-content: space-between;
 	margin-top: auto;
 }
